# nimbusguard

./: .gitignore  LICENSE  README.md  docker-compose.yml  sprint-plan.md
backend/: Dockerfile  alembic.ini  env.template  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01de46ec3882_add_finding_events_and_api_keys_tables.py  0b1a7574522d_add_asset_relationships_and_scim_.py  2b11abce3513_add_webhooks_finding_comments_framework_.py  5c2e594032eb_add_slack_integrations_jira_.py  617bda18ff21_add_saved_filters_table.py  6215f4003e5e_initial_schema.py  6409be9080bb_add_roles_invitations_mfa_fields_.py  76473b568fd5_add_refresh_tokens_table_and_user_.py  d3ff26e275d9_add_audit_logs_table.py  ddfaea332ea6_add_custom_dashboards_and_sso_configs_.py  fb5121fd2df4_add_custom_frameworks_compliance_.py
backend/app/: database.py  deps.py  exceptions.py  logging_config.py  main.py  middleware.py  rate_limit.py
backend/app/api/: accounts.py  api_keys.py  asset_graph.py  assets.py  audit.py  auth.py  branding.py  controls.py  custom_dashboards.py  custom_frameworks.py  dashboard.py  errors.py  exceptions.py  export.py  findings.py  invitations.py  jira.py  reports.py  roles.py  router.py  saved_filters.py  scans.py  scheduled_reports.py  scim.py  slack.py  sso.py  users.py  webhooks.py
backend/app/config/: control_mappings.yaml  remediation_snippets.py  settings.py
backend/app/models/: __init__.py  api_key.py  asset.py  asset_relationship.py  audit_log.py  base.py  cloud_account.py  compliance_snapshot.py  control.py  custom_dashboard.py  custom_framework.py  evidence.py  exception.py  finding.py  finding_comment.py  finding_event.py  invitation.py  jira_integration.py  refresh_token.py  remediation.py  role.py  saved_filter.py  scan.py  scheduled_report.py  slack_integration.py  sso_config.py  tenant.py  user.py  webhook.py
backend/app/schemas/: accounts.py  api_key.py  asset_graph.py  assets.py  audit.py  auth.py  branding.py  common.py  controls.py  custom_dashboard.py  custom_framework.py  dashboard.py  exceptions.py  finding_event.py  findings.py  invitation.py  jira.py  role.py  saved_filter.py  scans.py  scheduled_report.py  scim.py  slack.py  sso.py  users.py  webhook.py
backend/app/services/: api_key_auth.py  asset_graph.py  audit.py  auth.py  cache.py  compliance_snapshot.py  credentials.py  email.py  evaluator.py  finding_timeline.py  invitations.py  jira_service.py  mfa.py  normalizer.py  permissions.py  report_scheduler.py  scim.py  seed_controls.py  siem_formatter.py  slack_notifier.py  sso.py  webhook_dispatcher.py
backend/app/worker/: celery_app.py  tasks.py
backend/tests/: conftest.py
backend/tests/api/: test_accounts.py  test_api_keys.py  test_asset_graph.py  test_assets.py  test_audit.py  test_auth.py  test_branding.py  test_controls.py  test_dashboard.py  test_errors.py  test_exceptions.py  test_export.py  test_export_siem.py  test_finding_assignment.py  test_finding_timeline.py  test_findings.py  test_hardening.py  test_health.py  test_invitations.py  test_mfa.py  test_rbac.py  test_reports.py  test_roles.py  test_scan_incremental.py  test_scans.py  test_schedule.py  test_scim.py  test_similar_findings.py  test_sso.py  test_test_connection.py  test_users.py  test_webhooks.py
backend/tests/services/: test_asset_graph.py  test_auth.py  test_checks_acr.py  test_checks_aks.py  test_checks_alerts.py  test_checks_app_gateway.py  test_checks_aws_cloudtrail.py  test_checks_aws_ebs.py  test_checks_aws_ec2.py  test_checks_aws_guardduty.py  test_checks_aws_iam.py  test_checks_aws_lambda.py  test_checks_aws_rds.py  (+24 more)
(+126 files in other folders)
