[project]
name = "cspm-backend"
version = "0.1.0"
description = "Cloud Security Posture Management — Backend API"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyjwt[crypto]>=2.10.0",
    "bcrypt>=4.2.0",
    "redis>=5.2.0",
    "celery[redis]>=5.4.0",
    "httpx>=0.28.0",
    "azure-identity>=1.19.0",
    "azure-mgmt-resourcegraph>=8.0.0",
    "azure-mgmt-security>=7.0.0",
    "cryptography>=44.0.0",
    "reportlab>=4.2.0",
    "croniter>=2.0.0",
    "python-json-logger>=3.0.0",
    "slowapi>=0.1.9",
    "pyyaml>=6.0.0",
    "pyotp>=2.9.0",
    "python-multipart>=0.0.9",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "SIM"]
ignore = [
    "S101",   # assert in tests
    "S105",   # hardcoded passwords (false positives in tests/config)
    "S106",   # hardcoded password func arg (false positives in tests)
    "S108",   # hardcoded temp file
    "S104",   # hardcoded bind all interfaces
    "S110",   # try-except-pass
    "N815",   # mixed case variable (Pydantic/SQLAlchemy models)
    "N806",   # non-lowercase variable in function (SQLAlchemy Session)
    "N801",   # invalid class name
    "N803",   # invalid argument name
    "B008",   # function call in default arg (FastAPI Depends)
    "A002",   # builtin argument shadowing
    "UP046",  # non-pep695 generic class
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "N"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
